--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,15 +28,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.RXTXcomm.jar=rxtx-2.1-7-bins-r2\\RXTXcomm.jar
-file.reference.RXTXcomm.jar-1=mfz-rxtx-2.2-20081207-win-x64\\RXTXcomm.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.RXTXcomm.jar}:\
-    ${file.reference.RXTXcomm.jar-1}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,7 +78,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="C:\\Users\\Ethan\\Documents\\NetBeansProjects\\SerialCommunication\\mfz-rxtx-2.2-20081207-win-x64;%PATH%"
+run.jvmargs=-Djava.library.path="C:\\Users\\Ethan\\Documents\\NetBeansProjects\\SerialCommunication\\mfz-rxtx-2.2-20081207-win-x64;%PATH%;C:\\Users\\Colin\\Documents\\NetBeansProjects\\SerialCommunication\\mfz-rxtx-2.2-20081207-win-x64"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
